# geofence-crossing

./: .gitignore  README.md  layout.json  metadata.yaml  spec.yaml  test-cases.yaml
dev/: recompile.sh
ecoscope-workflows-geofence-crossing-workflow/: Dockerfile  README.md  VERSION.yaml  pixi.toml  pyproject.toml
ecoscope-workflows-geofence-crossing-workflow/ecoscope_workflows_geofence_crossing_workflow/: cli.py  formdata.py  params.json  params.py  rjsf.json
ecoscope-workflows-geofence-crossing-workflow/ecoscope_workflows_geofence_crossing_workflow/dags/: jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-geofence-crossing-workflow/geofence-crossing-tasks/: pyproject.toml
ecoscope-workflows-geofence-crossing-workflow/geofence-crossing-tasks/src/geofence_crossing_tasks/: __init__.py
ecoscope-workflows-geofence-crossing-workflow/tests/: conftest.py  test_metadata.py
technical_guide/: generate_technical_guide.py
