[project]
name = "geofence-crossing-tasks"
version = "0.1.0"
description = "Custom tasks for the geofence crossing workflow"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geofence_crossing_tasks"]
