[project]
name = "geofence-crossing-tasks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."wt_registry"]
geofence_crossing_tasks = "geofence_crossing_tasks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geofence_crossing_tasks"]
